--- a/movie-app/src/app/styles/components.scss
+++ b/movie-app/src/app/styles/components.scss
@@ -32,18 +32,31 @@
     justify-content: center;
     margin-top: 10px;
     .movies {
-        height: 400px;
+        min-height: 400px;
+        height: fit-content;
         display: flex;
         gap: 5px;
         flex-wrap: wrap;
-        width: 1000px;
+        min-width: 600px;
         border: 1px solid white;
         padding: 5px;
 
         li {
             border: 1px solid white;
-            width: 150px;
-            height: 50%;
+            width: 192.6px;
+            height: 200px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            font-size: 13.5px;
+            font-weight: 700;
+
+            .movieImages {
+                width: 100%;
+                height: 130px;
+            }
         }
     }
 }
