--- a/movie-app/src/app/styles/globals.css
+++ b/movie-app/src/app/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    outline: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    box-sizing: border-box;
+    transition: all ease-in-out 0.3s;
+}
