--- a/movie-app/src/app/styles/main.module.scss
+++ b/movie-app/src/app/styles/main.module.scss
@@ -1,26 +1,19 @@
-* {
-    outline: none;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    box-sizing: border-box;
-    transition: all ease-in-out 0.3s;
-}
-
 .mainContainer {
+    overflow: hidden;
     min-height: 100vh;
     height: fit-content;
-    background-color: rgb(92, 105, 122);
+    background-color: rgb(0, 0, 0);
     color: white;
-    padding: 100px 150px;
     display: flex;
     flex-direction: column;
     gap: 15px;
+    padding-bottom: 100px;
 
-    .title {
+    .mainTitle {
         width: 100%;
         text-align: center;
         font-size: 26.5px;
         font-weight: 700;
+        margin-top: 100px;
     }
 }
