--- a/movie-app/src/app/styles/components.module.scss
+++ b/movie-app/src/app/styles/components.module.scss
@@ -232,6 +232,19 @@
             display: flex;
             position: relative;
 
+            .playButton {
+                width: 100px;
+                height: 100px;
+                position: absolute;
+                top: 50%;
+                left: calc(50% - 50px);
+                cursor: pointer;
+                
+                &:hover {
+                    filter: brightness(50%);
+                }
+            }
+
             .slidesLeft {
                 width: 100%;
                 height: 100%;
