--- a/movie-app/src/app/styles/components.module.scss
+++ b/movie-app/src/app/styles/components.module.scss
@@ -94,6 +94,42 @@
                 border-radius: 20px;
             }
 
+            .movieLogos {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                left: 0;
+                top: 0;
+
+                .movieHdLogo {
+                    width: 35px;
+                    height: 35px;
+                    position: absolute;
+                    bottom: 10px;
+                    right: 10px;
+                    filter: brightness(70%);
+                }
+                
+                .movieTurkishLogo {
+                    width: 35px;
+                    height: 35px;
+                    position: absolute;
+                    bottom: 10px;
+                    left: 50px;
+                    filter: brightness(70%);
+                }
+    
+                .movieUsLogo {
+                    width: 35px;
+                    height: 35px;
+                    position: absolute;
+                    bottom: 10px;
+                    left: 10px;
+                    filter: brightness(70%);
+                }
+    
+            }
+
             .movieOverview {
                 position: absolute;
                 top: 0;
@@ -165,7 +201,8 @@
                 top: 1px;
 
                 &:hover {
-                    color: gold;
+                    color: rgba(255, 255, 255, 0.44);
+                    transition: all ease-in-out 0.1s;
                 }
                 p {
                     font-size: 15px;
