--- a/movie-app/src/app/styles/globals.css
+++ b/movie-app/src/app/styles/globals.css
@@ -11,4 +11,12 @@
     transition: all ease-in-out 0.3s;
 }
 
+.slick-dots li button:before
+{
+    color: white;
+}
+.slick-dots li.slick-active button:before
+{
+    color: white;
+}
 
