--- a/movie-app/src/app/styles/components.module.scss
+++ b/movie-app/src/app/styles/components.module.scss
@@ -161,6 +161,16 @@
     top: 0;
     z-index: 10;
 
+
+    .menuOpenClose {
+        position: absolute;
+        right: 50px;
+        top: 38px;
+        width: 25px;
+        height: 25px;
+        display: none;
+    }
+
     .nav {
         width: 100%;
         height: 100%;
@@ -260,6 +270,8 @@
     }
 }
 
+
+
 .sliderContainer {
     width: 100%;
     height: 500px;
@@ -313,6 +325,138 @@
         }
     }
 
+@media screen and (max-width: 800px) {
+    .navContainer {
+        padding: 0 20px;
+        .nav{
+            .navLeft {
+                .navLeftLogoPart{
+                    .logo {
+                        width: 30px;
+                        height: 30px;
+                    }
+                    h1 {
+                        font-size: 21px;
+                    }
+                
+                }
+                .categories {
+                    display: none;
+                }
+            }
+
+            .navRight {
+                width: 100%;
+                height: 100vh;
+                position: absolute;
+                right: 0;
+                top: 0;
+                background-color: black;
+                flex-direction: column;
+                transform: translateX(100%);
+            }
+        }
+
+        .menuOpenClose{
+            display: block;
+            cursor: pointer;
+            right: 20px;
+        }
+    }
+    .navContainerResponsive .nav .navRight {
+        transform: translateX(0);
+    }
+
+    .footerContainer {
+        padding: 100px 20px 150px 20px !important;
+        flex-direction: column;
+        gap: 40px;
+
+        h1 {
+            font-size: 18px !important;
+        }
+        
+        ul {
+            li {
+                font-size: 12.5px !important;
+            }
+        }
+
+        .footerContainerRight {
+            img {
+                width: 15px !important;
+                top: -1px !important;
+            }
+        }
+
+        .footerCopyRight{
+            padding: 20px !important;
+            .copyRightLeft{
+                font-size: 11px !important;
+            }
+            .copyRightRight {
+                position: absolute;
+                top: -10px;
+                left: 20px;
+            }
+        }
+    }
+
+    .sliderContainer {
+        height: 400px !important;
+    
+            .slides {
+                height: 400px;
+    
+                .playButton {
+                    width: 60px;
+                    height: 60px;
+                    left: calc(50% - 30px);
+                }
+    
+                .slidesLeft {
+                    padding-left: 20px;
+    
+                    h1 {
+                        font-size: 20px;
+                        font-weight: 700;
+                        width: 100%;
+                        margin-top: 70px;
+                    }
+                    p{
+                        font-size: 10px;
+                        width: 50%;
+                    }
+                }
+                .movieImagee {
+                    width: 100%;
+                }
+            }
+        }
+    
+    .movieContainer {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .navContainer .menuOpenClose {
+        width: 21px !important;
+        height: 21px !important;
+    }
+
+    .sliderContainer{ 
+        h1{
+            font-size: 17px !important;
+    }   
+        p {
+            font-size: 9.5px !important;
+        }
+}
+    
+}
+
 .footerContainer {
     width: 100%;
     height: fit-content;
@@ -321,6 +465,10 @@
     justify-content: space-between;
     position: relative;
 
+    h1 {
+        font-weight: 900;
+        font-size: 23px;
+    }
 
     .footerContainerLeft {
         width: fit-content;
@@ -328,10 +476,6 @@
         flex-direction: column;
         gap: 5px;
 
-        h1 {
-            font-weight: 900;
-            font-size: 23px;
-        }
         ul {
             li {
                 font-size: 14px;
@@ -347,10 +491,6 @@
         flex-direction: column;
         gap: 5px;
 
-        h1 {
-            font-size: 23px;
-            font-weight: 900;
-        }
         ul {
             display: flex;
             flex-direction: column;
@@ -415,3 +555,4 @@
         }
     }
 }
+
