--- a/movie-app/src/app/styles/components.module.scss
+++ b/movie-app/src/app/styles/components.module.scss
@@ -325,7 +325,7 @@
         }
     }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 880px) {
     .navContainer {
         padding: 0 20px;
         .nav{
@@ -433,11 +433,110 @@
                 }
             }
         }
-    
+
     .movieContainer {
         padding-left: 20px;
         padding-right: 20px;
+
+    .movies {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        width: 100%;
+        flex-wrap: wrap;
+
+        li {
+            width: 260px;
+            
+
+            &:hover {
+                filter: brightness(85%);
+        
+                .movieOverview {
+                    transform: translateY(0);
+                }
+            }
+
+            .movieTitle {
+                font-size: 14px;
+                font-weight: 700;
+                text-align: center;
+                position: absolute;
+                width: 100%;
+                top: 0;
+                left: 0;
+                height: 50px;
+                background-color: rgba(46, 46, 46, 0.463);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .movieImage {
+                width: 100%;
+                height: 100%;
+                z-index: -1;
+                filter: brightness(70%);
+                border-radius: 20px;
+            }
+
+            .movieLogos {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                left: 0;
+                top: 0;
+
+                .movieHdLogo {
+                    width: 35px;
+                    height: 35px;
+                    position: absolute;
+                    bottom: 10px;
+                    right: 10px;
+                    filter: brightness(70%);
+                }
+                
+                .movieTurkishLogo {
+                    width: 35px;
+                    height: 35px;
+                    position: absolute;
+                    bottom: 10px;
+                    left: 50px;
+                    filter: brightness(70%);
+                }
+    
+                .movieUsLogo {
+                    width: 35px;
+                    height: 35px;
+                    position: absolute;
+                    bottom: 10px;
+                    left: 10px;
+                    filter: brightness(70%);
+                }
+    
+            }
+
+            .movieOverview {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                transform: translateY(100%);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                font-size: 11px;
+                background-color: rgb(11, 11, 11);
+                padding: 6px;
+                transition: all ease-in-out 0.5s;
+            }
+
+        }
     }
+}
 }
 
 @media screen and (max-width: 500px) {
