--- a/movie-app/src/app/styles/components.module.scss
+++ b/movie-app/src/app/styles/components.module.scss
@@ -349,11 +349,11 @@
                 width: 100%;
                 height: 100vh;
                 position: absolute;
-                right: 0;
+                left: 0;
                 top: 0;
                 background-color: black;
                 flex-direction: column;
-                transform: translateX(100%);
+                transform: translateX(-100%);
             }
         }
 
