--- a/movie-app/src/app/styles/moviepage.module.scss
+++ b/movie-app/src/app/styles/moviepage.module.scss
@@ -4,8 +4,6 @@
     background-color: black;
     color: white;
     padding: 100px 50px;
-    z-index: -1;
-    position: relative;
     
     .blackEffect {
         position: absolute;
@@ -13,7 +11,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        z-index: -2;
+        z-index: 1;
         background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(0,0,0,0) 100%);
     }
 
@@ -23,9 +21,9 @@
         display: flex;
         flex-direction: column;
         padding-top: 100px;
-        gap: 10px;
-        z-index: 0;
+        z-index: 2;
         position: relative;
+        gap: 10px;
 
         h1 {
             font-weight: 900;
@@ -45,6 +43,7 @@
         .genres {
             display: flex;
             gap: 5px;
+            margin-top: 5px;
 
             li {
                 border: 1px solid white;
@@ -52,6 +51,7 @@
                 font-size: 14px;
                 border-radius: 10px;
                 position: relative;
+                cursor: pointer;
     
                 &:hover {
                     background-color: white;
@@ -68,7 +68,6 @@
         position: absolute;
         right: 0;
         top: 0;
-        z-index: -3;
-        filter: brightness(60%);
+        filter: brightness(40%);
     }
 }
