--- a/movie-app/src/app/styles/moviepage.module.scss
+++ b/movie-app/src/app/styles/moviepage.module.scss
@@ -12,7 +12,7 @@
         width: 100%;
         height: 100%;
         z-index: 1;
-        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(0,0,0,0) 100%);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 45%, rgba(0,0,0,0) 100%);
     }
 
     .leftPart {
@@ -20,10 +20,10 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        padding-top: 100px;
         z-index: 2;
         position: relative;
         gap: 10px;
+        justify-content: center;
 
         h1 {
             font-weight: 900;
@@ -60,6 +60,17 @@
             }
             
         }
+        .trailerContainer {
+            margin-top: 10px;
+            
+            iframe {
+                border-radius: 30px;
+                border: 2px solid white;
+                width: 600px;
+                height: 320px;
+                filter: brightness(80%);
+            }
+        }
     }
 
     img {
@@ -69,5 +80,117 @@
         right: 0;
         top: 0;
         filter: brightness(40%);
+    }
+}
+  
+@media screen and (max-width: 1700px) {
+    .movieContainer {
+        .blackEffect { 
+            background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 45%, rgba(0,0,0,0) 100%);
+        }
+    
+        .leftPart {  
+            h1 {
+                font-size: 24px;
+            }
+            p {
+                font-size: 15px;
+            }
+    
+            .genres {
+                li {
+                    font-size: 11.5px;
+                }
+                
+            }
+            .trailerContainer {         
+                iframe {
+                    width: 500px;
+                    height: 260px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .movieContainer {
+        .blackEffect { 
+            background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+        }
+    
+        .leftPart { 
+            p{
+                width: 80%;
+            }
+            .trailerContainer {         
+                iframe {
+                    width: 400px;
+                    height: 230px;
+                }
+            }
+        }
+        img {
+            width: 50%;
+        }
+    }
+}
+
+@media screen and (max-width: 880px) {
+    .movieContainer {
+        padding: 50px 20px;
+        .blackEffect { 
+            background: linear-gradient(90deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0) 100%);
+        }
+    
+        .leftPart {  
+            width: 100%;
+            p{
+                width: 100%;
+            }
+            .trailerContainer {         
+                iframe {
+                    width: 370px;
+                    height: 200px;
+                }
+            }
+        }
+        img {
+            width: 100%;
+            filter: brightness(15%);
+        }
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .movieContainer{
+        .leftPart{
+            p{
+                font-size: 11.5px;
+            }
+            .genres li {
+                font-size: 10px;
+            }
+
+            .trailerContainer{
+                iframe {
+                    width: 100%;
+                    height: 230px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .movieContainer{
+        .leftPart{
+            .trailerContainer{
+                iframe {
+                    width: 100%;
+                    height: 200px;
+                }
+            }
+        }
     }
 }
