--- a/movie-app/src/app/styles/moviepage.module.scss
+++ b/movie-app/src/app/styles/moviepage.module.scss
@@ -85,16 +85,19 @@
   
 @media screen and (max-width: 1700px) {
     .movieContainer {
+        padding-top: 170px;
         .blackEffect { 
-            background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 45%, rgba(0,0,0,0) 100%);
+            background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 60%, rgba(0,0,0,0) 100%);
         }
     
         .leftPart {  
+            width: 65%;
             h1 {
                 font-size: 24px;
             }
             p {
                 font-size: 15px;
+                width: 90%;
             }
     
             .genres {
@@ -109,6 +112,9 @@
                     height: 260px;
                 }
             }
+        }
+        img {
+            width: 45%;
         }
     }
 }
@@ -138,7 +144,7 @@
 
 @media screen and (max-width: 880px) {
     .movieContainer {
-        padding: 50px 20px;
+        padding: 150px 50px 20px 20px;
         .blackEffect { 
             background: linear-gradient(90deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0) 100%);
         }
