--- a/movie-app/src/app/styles/moviepage.module.scss
+++ b/movie-app/src/app/styles/moviepage.module.scss
@@ -85,7 +85,7 @@
   
 @media screen and (max-width: 1700px) {
     .movieContainer {
-        padding-top: 170px;
+        padding-top: 125px;
         .blackEffect { 
             background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 60%, rgba(0,0,0,0) 100%);
         }
@@ -144,7 +144,8 @@
 
 @media screen and (max-width: 880px) {
     .movieContainer {
-        padding: 150px 50px 20px 20px;
+        padding: 50px 20px;
+        padding-top: 100px;
         .blackEffect { 
             background: linear-gradient(90deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0) 100%);
         }
