--- a/movie-app/src/app/styles/components.module.scss
+++ b/movie-app/src/app/styles/components.module.scss
@@ -296,6 +296,11 @@
                 h1 {
                     font-size: 24px;
                     font-weight: 700;
+                    width: fit-content;
+                    background: #6A6A6A;
+                    background: linear-gradient(to right, #6A6A6A 0%, #E2E2E2 100%);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
                     
                 }
                 p{
