--- a/movie-app/src/app/styles/loginpage.module.scss
+++ b/movie-app/src/app/styles/loginpage.module.scss
@@ -22,10 +22,10 @@
             font-weight: 800;
             font-size: 25px;
         }
-        form {
+        .form {
             margin-top: 20px;
 
-            input {
+            .input {
                 width: 100%;
                 height: 50px;
                 padding: 5px 10px;
@@ -34,7 +34,7 @@
                 background-color: black;
                 font-size: 14px;
 
-                &::placeholder{
+                &::placeholder {
                     color: rgba(255, 255, 255, 0.452);
                 }
 
@@ -44,15 +44,27 @@
                 }
             }
 
-            .email,.password {
+            .email, .password {
                 margin-top: 10px;
                 display: flex;
                 flex-direction: column;
                 gap: 3px;
                 transition: all ease-in-out 0.3s;
 
+                .errorInput {
+                    border: 2px solid red;
+                    color: red;
+                }
+
+                .error {
+                    color: red;
+                    font-size: 10px;
+                    position: relative;
+                    left: 5px;
+                }
+
                 &:focus-within {
-                    label{
+                    label {
                         top: 15px;
                         background-color: black;
                         border-radius: 6px;
@@ -72,7 +84,7 @@
                     font-size: 14.5px;
                 }
             }
-            
+
             .buttonContainer {
                 width: 100%;
                 display: flex;
@@ -85,8 +97,8 @@
                     background-color: black;
                     border: 1px solid white;
                     border-radius: 6px;
-                    cursor:pointer;
-    
+                    cursor: pointer;
+
                     &:hover {
                         background-color: white;
                         color: black;
@@ -113,7 +125,5 @@
                 }
             }
         }
-
     }
 }
-
