--- a/movie-app/src/app/styles/registerpage.module.scss
+++ b/movie-app/src/app/styles/registerpage.module.scss
@@ -22,10 +22,10 @@
             font-weight: 800;
             font-size: 25px;
         }
-        form {
+        .form {
             margin-top: 20px;
 
-            input {
+            .input {
                 width: 100%;
                 height: 50px;
                 padding: 5px 10px;
@@ -50,6 +50,18 @@
                 flex-direction: column;
                 gap: 3px;
                 transition: all ease-in-out 0.3s;
+
+                .errorInput {
+                    border: 2px solid red;
+                    color: red;
+                }
+
+                .error{
+                    color: red;
+                    font-size: 10px;
+                    position: relative;
+                    left: 5px;
+                }
 
                 &:focus-within {
                     label{
