--- a/movie-app/src/app/styles/loginpage.module.scss
+++ b/movie-app/src/app/styles/loginpage.module.scss
@@ -36,6 +36,7 @@
 
                 &::placeholder {
                     color: rgba(255, 255, 255, 0.452);
+                    font-size: 12px;
                 }
 
                 &:focus {
@@ -56,11 +57,28 @@
                     color: red;
                 }
 
+                .successInput {
+                    border: 1px solid rgb(102, 255, 0);
+                    font-size: 11.5px;
+                    color: rgb(102, 255, 0);
+                }
+ 
                 .error {
                     color: red;
                     font-size: 10px;
                     position: relative;
                     left: 5px;
+                }
+
+                .success {
+                    color: rgb(102, 255, 0);
+                    top:11px;
+                    font-size: 10px;
+                    left: 5px;
+                    background-color: black;
+                    border: 1px solid rgb(102, 255, 0);
+                    padding: 2px 8px;
+                    border-radius: 6px;
                 }
 
                 &:focus-within {
@@ -73,6 +91,10 @@
                         font-size: 10px;
                         left: 15px;
                         color: rgb(0, 255, 213);
+                    }
+
+                    .input {
+                        border: 2px solid rgb(0, 255, 213); 
                     }
                 }
 
