--- a/movie-app/src/app/styles/profile.module.scss
+++ b/movie-app/src/app/styles/profile.module.scss
@@ -6,9 +6,11 @@
     color: white;
     padding: 100px 50px;
 
+
     .profile {
         width: 100%;
         height: 50vh;
+
         .profileTitle {
             width: 100%;
             text-align: center;
@@ -18,15 +20,125 @@
         .userInfo {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 30px;
             margin-top: 20px;
+            width: fit-content;
 
             h1 {
                 font-size: 22px;
-                border-bottom: 2px solid white;
+                border-bottom: 2px solid rgb(0, 255, 213);
                 width: fit-content;
                 font-weight: 800;
+                color: rgb(0, 255, 213);
+            }
+
+            .infos {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                font-weight: 300;
+
+                p {
+                    display: flex;
+                    flex-direction: column;
+                    position: relative;
+                    width: 200px;
+                    justify-content: center;
+                    border: 1px solid rgb(0, 255, 213);
+                    height: 50px;
+                    border-radius: 5px;
+                    padding-left: 10px;
+                
+                    .titles {
+                        font-weight: 700;
+                        border: 1px solid rgb(0, 255, 213);
+                        padding: 2px 6px;
+                        border-radius: 3px;
+                        font-size:9.5px;
+                        width: fit-content;
+                        position: absolute;
+                        background-color: black;
+                        margin-top: -50px;
+                    }
+
+                    .userValues {
+                        font-weight: 400;
+                        font-size: 13px;
+                    }
+                }
+                
+
+                
+            }
+
+            .buttonContainer {
+                width: 100%;
+                
+                .logoutButton {
+                    font-size: 13px;
+                    color: white;
+                    background-color: black;
+                    padding: 4px 10px;
+                    border: 1px solid rgb(0, 255, 213);
+                    width: fit-content;
+                    font-weight: 600;
+                    border-radius: 5px;
+                    position: relative;
+                    top: -10px;
+
+                    &:hover {
+                        background-color: rgb(0, 255, 213);
+                        font-size: 11px;
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+@media screen and (max-width: 880px){
+    .profileContainer {
+        padding: 130px 20px 90px 20px;
+        
+        .profile {
+            width: 100%;
+            height: fit-content;
+
+            .profileTitle {
+                font-size: 24.5px;
+                text-align: start;
+                width: fit-content;
+                border-bottom: 3px solid white;
+            }
+            .userInfo {
+                gap: 30px;
+                margin-top: 15px;
+                width: 100%;
+    
+                h1 {
+                    font-size: 19px;
+                }
+    
+                .infos {
+                    width: 100%;
+                    p {
+                        width: 100%;         
+                    }  
+                }
             }
         }
     }
+}
+
+.loading,.redirecting {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    font-weight: 700;
+    font-size: 17px;
 }
