--- a/movie-app/src/app/styles/loginpage.module.scss
+++ b/movie-app/src/app/styles/loginpage.module.scss
@@ -153,5 +153,6 @@
 @media screen and (max-width: 900px) {
     .loginContainer .formContainer {
         padding: 10px 8px 80px 8px;
+        border: none;
     }
 }
