--- a/movie-app/src/app/styles/registerpage.module.scss
+++ b/movie-app/src/app/styles/registerpage.module.scss
@@ -165,5 +165,6 @@
 @media screen and (max-width: 900px) {
     .registerContainer .formContainer {
         padding: 10px 8px 80px 8px;
+        border: none;
     }
 }
