--- a/movie-app/src/app/styles/profile.module.scss
+++ b/movie-app/src/app/styles/profile.module.scss
@@ -1,35 +1,39 @@
 .profileContainer {
     width: 100%;
-    min-height: 100vh;
     height: fit-content;
     background-color: black;
     color: white;
-    padding: 100px 50px;
-
+    padding: 120px 50px 30px 50px;
 
     .profile {
         width: 100%;
         height: 50vh;
 
         .profileTitle {
-            width: 100%;
-            text-align: center;
             font-size: 27px;
             font-weight: 900;
+            width: fit-content;
+            background: #6A6A6A;
+            background: linear-gradient(to right, #6A6A6A 0%, #E2E2E2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
         .userInfo {
             display: flex;
             flex-direction: column;
             gap: 30px;
             margin-top: 20px;
-            width: fit-content;
+            width: 50%;
 
             h1 {
                 font-size: 22px;
-                border-bottom: 2px solid rgb(0, 255, 213);
+                border-bottom: 2.5px solid #6A6A6A;
                 width: fit-content;
                 font-weight: 800;
-                color: rgb(0, 255, 213);
+                background: #6A6A6A;
+                background: linear-gradient(to right, #6A6A6A 0%, #E2E2E2 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             }
 
             .infos {
@@ -42,16 +46,16 @@
                     display: flex;
                     flex-direction: column;
                     position: relative;
-                    width: 200px;
+                    width: 100%;
                     justify-content: center;
-                    border: 1px solid rgb(0, 255, 213);
+                    border: 2px solid #6A6A6A;
                     height: 50px;
                     border-radius: 5px;
                     padding-left: 10px;
                 
                     .titles {
                         font-weight: 700;
-                        border: 1px solid rgb(0, 255, 213);
+                        border: 2px solid #6A6A6A;
                         padding: 2px 6px;
                         border-radius: 3px;
                         font-size:9.5px;
@@ -59,6 +63,7 @@
                         position: absolute;
                         background-color: black;
                         margin-top: -50px;
+                        color: #6A6A6A;
                     }
 
                     .userValues {
@@ -79,7 +84,7 @@
                     color: white;
                     background-color: black;
                     padding: 4px 10px;
-                    border: 1px solid rgb(0, 255, 213);
+                    border: 2px solid #6A6A6A;
                     width: fit-content;
                     font-weight: 600;
                     border-radius: 5px;
@@ -87,7 +92,7 @@
                     top: -10px;
 
                     &:hover {
-                        background-color: rgb(0, 255, 213);
+                        background-color: #6A6A6A;
                         font-size: 11px;
                     }
                 }
@@ -99,7 +104,7 @@
 
 @media screen and (max-width: 880px){
     .profileContainer {
-        padding: 130px 20px 90px 20px;
+        padding: 110px 20px 30px 20px;
         
         .profile {
             width: 100%;
@@ -107,9 +112,6 @@
 
             .profileTitle {
                 font-size: 24.5px;
-                text-align: start;
-                width: fit-content;
-                border-bottom: 3px solid white;
             }
             .userInfo {
                 gap: 30px;
