--- a/movie-app/src/app/style.css
+++ b/movie-app/src/app/style.css
@@ -11,11 +11,11 @@
     transition: all ease-in-out 0.3s;
 }
 
-.slick-dots li button:before
-{
+
+.slick-dots li button:before {
+    color: #ffffff; 
+  }
+  
+.slick-dots li.slick-active button:before {
     color: white;
-}
-.slick-dots li.slick-active button:before
-{
-    color: white;
-}
+  }
