--- a/movie-app/src/app/styles/profile.module.scss
+++ b/movie-app/src/app/styles/profile.module.scss
@@ -1,3 +1,9 @@
+.profileScreen {
+    width: 100%;
+    background-color: black;
+    min-height: 100vh;
+}
+
 .profileContainer {
     width: 100%;
     height: fit-content;
